changing text alignment of size in thead. changing from right to left to prevent overlapping the arrows when using size to sort.

--- a/skins/larry/mail.css
+++ b/skins/larry/mail.css
@@ -495,7 +495,7 @@ table.messagelist.fixedcopy {
 
 .messagelist tr td.size {
 	width: 60px;
-	text-align: right;
+	text-align: left;
 }
 
 .messagelist thead tr td.size {
